# EDAhw1_TSP

./: .gitignore  EDAhw1.cabal  README.md  TSP.cabal
data/: hw1.TSP.txt  result.txt  result_AllCities.txt  result_BB_redundantResults.txt  result_NN.txt  result_all_possible_way  result_withBoundUpdate.txt  test
src/: Main.hs
src/TSP/: BB.hs  Map.hs  MonadList.hs  NN.hs  Parser.hs  Practice.hs  StateMonad.hs  Types.hs  Writer.hs
