name:                TSP
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/timerg/EDAhw1#readme
license:             BSD3
license-file:        LICENSE
author:              ggteven
maintainer:          ggteven@gmail.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
executable TSP
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                    ,   attoparsec
                    ,   containers
                    ,   scientific
                    ,   bytestring
                    ,   mtl
  other-modules: 	   TSP.BB
                    ,	TSP.Map
                    ,	TSP.NN
                    ,	TSP.Parser
                    ,	TSP.Types

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/EDAhw1
